#
# Process this file with automake to produce Makefile.in
#

SUBDIRS = cluster custom_fields scalability_1 scalability_2 scalability_3 calendar datetime flow_alternate_1 flow_alternate_2 flow_alternate_3 flow_fixed flow_offset flow_transferbatch constraints_combined_1 constraints_combined_2 constraints_leadtime_1 constraints_leadtime_2 constraints_leadtime_3 constraints_material_1 constraints_material_2 constraints_material_3 constraints_material_4 jobshop xml constraints_resource_1 constraints_resource_2 constraints_resource_3 constraints_resource_4 constraints_resource_5 constraints_resource_6 constraints_resource_7 criticality problems deletion operation_alternate operation_available operation_effective operation_pre_post operation_routing operation_split pegging python_1 python_2 python_3 demand_policy safety_stock flow_effective load_alternate load_bucketized load_effective resource_buckets resource_efficiency setup_1 setup_2 setup_3 skills supplier wip_1 wip_2 distribution_1 global_purchase mto

EXTRA_DIST = runtest.py

check:
	$(PYTHON) runtest.py ${TESTARGS}
