#
# Process this file with automake to produce Makefile.in
#

EXTRA_DIST = build.bat frepple.sln README.txt model.vcproj utils.vcproj main.vcproj module_forecast.vcproj solver.vcproj dll.vcproj module_lp_solver.vcproj module_webservice.vcproj

clean-local:
	-rm -rf model utils module_forecast main dll solver module_lp_solver module_webservice *.vcproj.* *.vcxproj* *.opt *.ncb *.suo *.log *.sdf ipch
