#
# Process this file with automake to produce Makefile.in
#

EXTRA_DIST = build.bat frepple.sln README.txt model.vcproj utils.vcproj main.vcproj solver.vcproj dll.vcproj module_lp_solver.vcproj

clean-local:
	-rm -rf model utils main dll solver module_lp_solver *.vcproj.* *.vcxproj* *.opt *.ncb *.suo *.log *.sdf ipch
