#
# Process this file with automake to produce Makefile.in
#

EXTRA_DIST = build.bat frepple.sln README.txt model.vcxproj utils.vcxproj main.vcxproj solver.vcxproj dll.vcxproj model.vcxproj.filters utils.vcxproj.filters main.vcxproj.filters solver.vcxproj.filters dll.vcxproj.filters pythonextension.vcxproj pythonextension.vcxproj.filters

clean-local:
	-rm -rf model utils main dll solver pythonextension *.user *.opt *.ncb *.suo *.log *.sdf ipch *.db
