#
# Process this file with automake to produce Makefile.in
#

noinst_LTLIBRARIES = libmodel.la

AM_CPPFLAGS=-I@top_builddir@/include

CLEANFILES = *.gcda *.gcov *.gcno

libmodel_la_SOURCES = buffer.cpp flow.cpp flow_plan.cpp calendar.cpp item.cpp load.cpp load_plan.cpp location.cpp demand.cpp operation.cpp operation_plan.cpp plan.cpp problem.cpp problems_demand.cpp problems_operation_plan.cpp resource.cpp leveled.cpp actions.cpp library.cpp customer.cpp problems_resource.cpp problems_buffer.cpp
