#
# Process this file with automake to produce Makefile.in
#

noinst_LTLIBRARIES = libmodel.la

AM_CPPFLAGS=-I@top_builddir@/include

CLEANFILES = *.gcda *.gcov *.gcno

libmodel_la_SOURCES = buffer.cpp flow.cpp flowplan.cpp pegging.cpp calendar.cpp item.cpp load.cpp loadplan.cpp location.cpp demand.cpp operation.cpp operationplan.cpp plan.cpp problem.cpp problems_demand.cpp problems_operationplan.cpp resource.cpp leveled.cpp actions.cpp library.cpp customer.cpp problems_resource.cpp problems_buffer.cpp
